--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ lto = true
 [dependencies]
 chrono = "0.4.7"
 fluent = "0.6.0"
+fluent-bundle = "0.6.0"
 serde = "1.0.94"
 log = "0.4.6"
 env_logger = "0.6.2"
