--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,14 +21,15 @@ lto = true
 
 [dependencies]
 chrono = "0.4.7"
-fluent = "0.6.0"
-fluent-bundle = "0.6.0"
+fluent = "0.8.0"
+fluent-bundle = "0.8.0"
 serde = "1.0.94"
 log = "0.4.6"
 env_logger = "0.6.2"
 rand = "0.7.0"
 walkdir = "2.2.8"
 lazy_static = "1.3.0"
+unic-langid = "0.6.1"
 
 [dependencies.config]
 version = "0.9.3"
