--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ rand = "0.7.0"
 walkdir = "2.2.8"
 lazy_static = "1.3.0"
 unic-langid = "0.6.1"
+rust-embed = "5.1.0"
 
 [dependencies.config]
 version = "0.9.3"
@@ -37,12 +38,6 @@ features = ["toml"]
 [dependencies.diesel]
 version = "1.4.3"
 features = ["chrono", "postgres", "r2d2"]
-
-[dependencies.rust-embed]
-git = "https://github.com/pyros2097/rust-embed"
-
-[dependencies.rust-embed-utils]
-git = "https://github.com/pyros2097/rust-embed"
 
 [dependencies.serenity]
 version = "0.7.0"
