--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,9 @@ log = "0.4.6"
 env_logger = "0.7.0"
 rand = "0.7.0"
 walkdir = "2.2.8"
-lazy_static = "1.3.0"
 unic-langid = "0.6.1"
 rust-embed = "5.1.0"
+once_cell = "1.2.0"
 
 [dependencies.config]
 version = "0.9.3"
