--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ maintenance = { status = "actively-developed" }
 [profile.release]
 lto = true
 
+[features]
+default = ["calc-rhai"]
+calc-rhai = ["rhai"]
+
 [dependencies]
 chrono = "0.4.7"
 fluent = "0.8.0"
@@ -30,6 +34,7 @@ walkdir = "2.2.8"
 unic-langid = "0.6.1"
 rust-embed = "5.1.0"
 once_cell = "1.2.0"
+rhai = { version = "0.9.1", optional = true }
 
 [dependencies.config]
 version = "0.9.3"
