--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,8 @@ unic-langid = "0.6.1"
 rust-embed = "5.1.0"
 once_cell = "1.2.0"
 rhai = { version = "0.9.1", optional = true }
+lalrpop-util = "0.17.2"
+regex = "1.3.1"
 
 [dependencies.config]
 version = "0.9.3"
