--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ jobs:
     name: Build
     runs-on: ubuntu-18.04
     steps:
-      - name: install library depedencies
+      - name: install libraries
         run: sudo apt install -y libpq-dev
       - name: prepare source
         uses: actions/checkout@v1
@@ -33,15 +33,25 @@ jobs:
           mkdir -p release
           cp target/release/garrīre release/
           cp Example.Settings.toml release/
+          tar caf release.tar.xz release
       - name: upload built artifact
         uses: actions/upload-artifact@master
         with:
           name: release
           path: release
           overwrite: true
+      - name: upload artifact to condere
+        uses: appleboy/scp-action@master
+        with:
+          host: condere.cogitare.nz
+          username: garrīre
+          key: ${{ secrets.SSH_KEY }}
+          source: release.tar.xz
+          target: landing-pad
+          overwrite: true
       - name: upload target cache
         uses: actions/upload-artifact@master
         with:
           name: target-cache
-          with: target
+          path: target
           overwrite: true
