--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ once_cell = "1.2.0"
 rhai = { version = "0.9.1", optional = true }
 lalrpop-util = "0.17.2"
 regex = "1.3.1"
+typemap = "0.3.3"
 
 [dependencies.config]
 version = "0.9.3"
