--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,11 @@ rhai = { version = "0.9.1", optional = true }
 lalrpop-util = "0.17.2"
 regex = "1.3.1"
 typemap = "0.3.3"
+serde_json = "1.0.41"
+error-chain = "0.12.1"
+http = "0.1.18"
+base64 = "0.10.1"
+r2d2 = "0.8.5"
 
 [dependencies.config]
 version = "0.9.3"
@@ -46,6 +51,11 @@ features = ["toml"]
 [dependencies.diesel]
 version = "1.4.3"
 features = ["chrono", "postgres", "r2d2"]
+
+[dependencies.isahc]
+version = "0.7.4"
+default-features = false
+features = ["http2", "json"]
 
 [dependencies.serenity]
 version = "0.7.0"
