Implement help system

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,10 +21,8 @@ location /static/ {
 }
 
 # Help is pre-generated and not context-dependent
-# TODO: support help on subcommands
-location = /command/help {
-  return 302 /static/help.txt;
-}
+location ~ ^/command/help$ { return 302 /static/help.txt; }
+location ~ ^/command/help/(\w+)$ { return 302 /static/help/$1.txt; }
 
 location /command/ {
   # That prevents us calling ourselves, but also other
