Short-circuit `~command help` at routing level

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,7 @@ location /static/ {
 # Help is pre-generated and not context-dependent
 location ~ ^/command/help$ { return 302 /static/help.txt; }
 location ~ ^/command/help/(\w+)$ { return 302 /static/help/$1.txt; }
+location ~ ^/command/(\w+)/help$ { return 302 /static/help/$1.txt; }
 
 location /command/ {
   # That prevents us calling ourselves, but also other
