--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,7 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {
-        "clancats/hydrahon": "dev-master"
-    },
+    "require": {},
     "autoload": {
         "psr-4": {
             "App\\": "app/"
