--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ location ~ .*\.php {
   set $path_info $fastcgi_path_info;
   fastcgi_param PATH_INFO $path_info;
 
-  include fastcgi.conf;
+  include /etc/nginx/fastcgi.conf;
   fastcgi_pass fpmpool;
 }
 
