--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,14 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "doctrine/orm": "^2.7.3"
+        "ext-iconv": "*",
+        "ext-intl": "*",
+        "illuminate/container": "^8.8.0",
+        "illuminate/database": "^8.8.0",
+        "illuminate/events": "^8.8.0",
+        "illuminate/filesystem": "^8.8.0",
+        "symfony/var-dumper": "^5.1.0",
+        "symfony/finder": "^5.1.0"
     },
     "autoload": {
         "psr-4": {
