Stub out join handler

--- a/nginx.conf
+++ b/nginx.conf
@@ -36,6 +36,14 @@ location /command/ {
   rewrite . /app/index.php last;
 }
 
+location ~ ^/server/\d+/join/\d+$ {
+	# Don't interact with bots joining the server
+	if ($http_accord_author_type = "bot") { return 404; }
+	if ($http_accord_user_type = "bot") { return 404; }
+
+	rewrite . /app/index.php last;
+}
+
 # Sets the presence. Because this only happens on Accord
 # boot, it's much rarer now than it was prior. Will need
 # to figure out how to set presence at runtime... # TODO
