--- a/nginx.conf
+++ b/nginx.conf
@@ -51,6 +51,19 @@ location = /discord/connecting {
   rewrite . /app/index.php last;
 }
 
+# Send all 2-byte messages to a check in case they're
+# the "double-bang" shorthand command
+location ~ ^/server/\d+/channel/\d+/message$ {
+	if ($http_accord_content_length = "2") {
+		return 307 /check/double-bang;
+	}
+}
+
+# Internal redirect target
+location /check/ {
+	rewrite . /app/index.php last;
+}
+
 # For efficiency, to avoid nginx looking for a file
 # if it's not explicitely handled above
 location / {
