--- a/calc/Cargo.toml
+++ b/calc/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Félix Saparelli <felix@passcod.name>"]
 edition = "2018"
 
 [lib]
-crate-type = ["cdylib", "lib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 libc = "0.2.79"
