Add stub k8s deploy file

--- a/.editorconfig
+++ b/.editorconfig
@@ -18,6 +18,10 @@ indent_style = space
 indent_style = space
 indent_size = 2
 
+[*.yml]
+indent_style = space
+indent_size = 2
+
 [*.md]
 indent_style = space
 indent_size = 3
