--- a/prod/nginx.conf
+++ b/prod/nginx.conf
@@ -9,17 +9,20 @@ events {
 http {
 	error_log stderr info;
 
-	upstream fpmpool {
-		server 10.0.128.40:9001;
-		server 10.0.128.40:9002;
-		server 10.0.128.40:9003;
-		server 10.0.128.40:9004;
-	}
+	upstream fpmpool { server 10.0.128.64:9000; }
 
 	server {
 		listen 8265;
 		set $root /webroot;
 		include garrire.conf;
+	}
+
+	server {
+		listen 81;
+		access_log off;
+		location /nginx_status {
+			stub_status;
+		}
 	}
 
 	server { set $fastcgi ""; }
