Make nginx logging work in prod

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,7 @@ location ~ .*\.php {
   fastcgi_param PATH_INFO $path_info;
 
   include /etc/nginx/fastcgi.conf;
+  set $fastcgi "PHP";
   fastcgi_pass fpmpool;
 }
 
