--- a/prod/Dockerfile.accord
+++ b/prod/Dockerfile.accord
@@ -1,15 +1,9 @@
-FROM rust:alpine AS build
+FROM rust AS build
 
-RUN apk add git build-base openssl-dev
-RUN git clone https://github.com/passcod/accord /build
+RUN apt update && apt install -y build-essential libssl-dev
+RUN cargo install --version 0.0.3 passcod-accord
 
-WORKDIR /build
-RUN git checkout v0.0.3
-RUN cargo build --release
-RUN strip target/release/accord
-
-
-FROM alpine
-
-COPY --from=build /build/target/release/accord /bin/
+FROM ubuntu
+COPY --from=build /usr/local/cargo/bin/accord /bin/accord
+RUN apt update && apt install -y openssl
 CMD ["/bin/accord"]
