--- a/prod/nginx.conf
+++ b/prod/nginx.conf
@@ -7,23 +7,7 @@ events {
 }
 
 http {
-	error_log stderr info;
-
-	upstream fpmpool { server 10.0.128.64:9000; }
-
-	server {
-		listen 8265;
-		set $root /webroot;
-		include garrire.conf;
-	}
-
-	server {
-		listen 81;
-		access_log off;
-		location /nginx_status {
-			stub_status;
-		}
-	}
+	error_log /error.log info;
 
 	server { set $fastcgi ""; }
 	log_format log_json escape=json
@@ -82,5 +66,21 @@ http {
 		'}'
 	'}';
 
-	access_log /proc/self/fd/1 log_json;
+	access_log /access.log.json log_json;
+
+	upstream fpmpool { server 10.0.128.64:9000; }
+
+	server {
+		listen 8265;
+		set $root /webroot;
+		include garrire.conf;
+	}
+
+	server {
+		listen 81;
+		access_log off;
+		location /nginx_status {
+			stub_status;
+		}
+	}
 }
