--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "illuminate/filesystem": "^8.8.0",
         "psy/psysh": "^0.10.4",
         "symfony/var-dumper": "^5.1.0",
-        "symfony/finder": "^5.1.0"
+        "symfony/finder": "^5.1.0",
+        "guzzlehttp/guzzle": "^7.0"
     },
     "autoload": {
         "psr-4": {
