Deny help for bots (fix #2)

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,12 @@ location ~ .*\.php {
 }
 
 location /static/ {
+  # No statics for bots either; this mostly prevents
+  # bots from getting help, but may have other effects,
+  # can be revisited.
+  if ($http_accord_author_type = "bot") { return 404; }
+  if ($http_accord_user_type = "bot") { return 404; }
+
   root $root;
 }
 
