Make pluralkit handling a little more intuitive

--- a/nginx.conf
+++ b/nginx.conf
@@ -32,10 +32,18 @@ location ~ ^/command/help/(\w+)$ { return 302 /static/help/$1.txt; }
 location ~ ^/command/(\w+)/help$ { return 302 /static/help/$1.txt; }
 
 location /command/ {
+  set is_bot 0;
   # That prevents us calling ourselves, but also other
   # bots calling us, which may or may not be desirable
-  if ($http_accord_author_type = "bot") { return 404; }
-  if ($http_accord_user_type = "bot") { return 404; }
+  if ($http_accord_author_type = "bot") { set is_bot 1; }
+  if ($http_accord_user_type = "bot") { set is_bot 1; }
+
+  # Special handling for pluralkit
+  if ($http_accord_author_id = "676603550469718025") { set is_bot 0; }
+  # (each user with autoproxying must be blocked below)
+  if ($http_account_author_id = "182887606340550656") { set is_bot 1; }
+
+  if ($bot = 1) { return 404; }
 
   # Static files existing wouldn't be picked up anyway
   # as the method won't be a GET, so rewrite outright
