Well that didn’t work

--- a/nginx.conf
+++ b/nginx.conf
@@ -39,9 +39,9 @@ location /command/ {
   if ($http_accord_user_type = "bot") { set $is_bot 1; }
 
   # Special handling for pluralkit
-  if ($http_accord_author_id = "676603550469718025") { set $is_bot 0; }
+  #if ($http_accord_author_id = "676603550469718025") { set $is_bot 0; }
   # (each user with autoproxying must be blocked below)
-  if ($http_account_author_id = "182887606340550656") { set $is_bot 1; }
+  #if ($http_accord_author_id = "182887606340550656") { set $is_bot 1; }
 
   if ($is_bot = 1) { return 404; }
 
