--- a/prod/Dockerfile.accord
+++ b/prod/Dockerfile.accord
@@ -1,7 +1,7 @@
 FROM rust AS build
 
 RUN apt update && apt install -y build-essential libssl-dev
-RUN cargo install --version 0.0.4 passcod-accord
+RUN cargo install --version 0.0.9 passcod-accord --locked
 
 FROM ubuntu
 COPY --from=build /usr/local/cargo/bin/accord /bin/accord
