Add `/api/plot` endpoint
This adds `Models\ApiEndpoint` (a stripped-down `Models\Command`), a
migration for that (which also adds the `/api/plot` endpoint pointing
to `Controllers\ApiEndpoint\Plot`, and `Controllers\ApiController` (a
stripped-down `Controllers\Controller`, for non-Accord requests).

--- a/nginx.conf
+++ b/nginx.conf
@@ -78,6 +78,11 @@ location /check/ {
 	rewrite . /app/index.php last;
 }
 
+# API endpoints
+location /api/ {
+	rewrite . /app/index.php last;
+}
+
 # For efficiency, to avoid nginx looking for a file
 # if it's not explicitely handled above
 location / {
